Remove duplicate statements